# shared_whiteboard

./: CMakeLists.txt  README.md  README.txt  client.cpp  command_factory.cpp  command_factory.hpp  command_stack.hpp  image.cpp  image.hpp  main.cpp  offline.cpp  server.cpp  service_command_factory.cpp  service_command_factory.hpp  settings.hpp  tool_factory.cpp  tool_factory.hpp  toolbar.cpp  toolbar.hpp  toolbar_resource_loader.cpp  toolbar_resource_loader.hpp  user_editor.cpp  user_editor.hpp  utilities.hpp  whiteboard.cpp  whiteboard.hpp
commands/: command.hpp  command_dto.hpp  command_dto_io.cpp  command_name.hpp  draw_circle.cpp  draw_circle.hpp  draw_image.cpp  draw_image.hpp  draw_poly_line.cpp  draw_poly_line.hpp  draw_rectangle.cpp  draw_rectangle.hpp  draw_text.cpp  draw_text.hpp
network/: network_server.cpp  network_server.hpp  nework_client.cpp  nework_client.hpp
service_commands/: redo.cpp  redo.hpp  service_command.hpp  service_command_dto.hpp  service_command_dto_io.cpp  service_command_name.hpp  undo.cpp  undo.hpp
tool/: circle_maker.cpp  circle_maker.hpp  color_changer.cpp  color_changer.hpp  drawing_tool.hpp  line_maker.cpp  line_maker.hpp  rectangle_maker.cpp  rectangle_maker.hpp  redo_maker.cpp  redo_maker.hpp  service_tool.hpp  text_maker.cpp  text_maker.hpp  thickness_changer.cpp  thickness_changer.hpp  tool.hpp  tool_name.hpp  tool_tool.hpp  undo_maker.cpp  undo_maker.hpp
tool_command/: change_color.cpp  change_color.hpp  change_thickness.cpp  change_thickness.hpp  tool_command.hpp
